WIP libXenon Support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,17 +18,6 @@ if(WERROR)
     add_compile_options(-Werror)
 endif()
 
-# WASM
-if(EMSCRIPTEN)
-    function(add_compile_and_link_options)
-        add_compile_options(${ARGV})
-        add_link_options(${ARGV})
-    endfunction()
-    set(CMAKE_EXECUTABLE_SUFFIX ".js")
-    add_link_options("$<$<CONFIG:DEBUG>:-gsource-map>")
-    add_link_options(-Wno-pthreads-mem-growth -sALLOW_MEMORY_GROWTH=1)
-endif()
-
 # Detect Windows
 include(CheckSymbolExists)
 check_symbol_exists("_WIN32" "" REMCPE_WIN32)
@@ -41,17 +30,62 @@ if(APPLE)
     add_compile_options(-Wno-deprecated-declarations)
 endif()
 
-# Windows Linking
-if(REMCPE_WIN32)
+# Platform-specific stuff #
+if(REMCPE_WIN32) # Windows
     add_link_options(
         -static-libgcc
         -static-libstdc++
     )
-endif()
+elseif(XENON) # Xbox 360 (libXenon)
+    include_directories(${DEVKITXENON}/usr/include)
+    link_directories(${DEVKITXENON}/usr/lib ${DEVKITXENON}/xenon/lib/32)
+    set(CMAKE_EXE_LINKER_FLAGS "-n -T ${XENON_LDSCRIPT}")
 
-# HaikuOS Network Library
-if(HAIKU)
+    # Binary to Object/Header
+    function(xenon_bin2o TARGET_NAME BIN_FILE)
+        get_filename_component(BIN_NAME ${BIN_FILE} NAME)
+        string(REPLACE "." "_" SAFE_NAME ${BIN_NAME})
+        # If it starts with a number, prepend underscore
+        if(SAFE_NAME MATCHES "^[0-9]")
+            set(SAFE_NAME "_${SAFE_NAME}")
+        endif()
+
+        set(ASM_FILE "${CMAKE_CURRENT_BINARY_DIR}/${BIN_NAME}.s")
+        set(HEADER_FILE "${CMAKE_CURRENT_BINARY_DIR}/${SAFE_NAME}.h")
+
+        # Generate Header
+        file(WRITE ${HEADER_FILE} 
+            "extern const u8 ${SAFE_NAME}_end[];\n"
+            "extern const u8 ${SAFE_NAME}[];\n"
+            "extern const u32 ${SAFE_NAME}_size;\n"
+        )
+
+        # Run bin2s to create assembly
+        add_custom_command(
+            OUTPUT ${ASM_FILE}
+            COMMAND bin2s ${CMAKE_CURRENT_SOURCE_DIR}/${BIN_FILE} > ${ASM_FILE}
+            DEPENDS ${BIN_FILE}
+            WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+        )
+
+        # Add to target sources
+        target_sources(${TARGET_NAME} PRIVATE ${ASM_FILE})
+        target_include_directories(${TARGET_NAME} PRIVATE ${CMAKE_CURRENT_BINARY_DIR})
+    endfunction()
+
+    #add_subdirectory(thirdparty/libxenon_utils EXCLUDE_FROM_ALL)
+elseif(EMSCRIPTEN) # WASM
+    function(add_compile_and_link_options)
+        add_compile_options(${ARGV})
+        add_link_options(${ARGV})
+    endfunction()
+    set(CMAKE_EXECUTABLE_SUFFIX ".js")
+    add_link_options("$<$<CONFIG:DEBUG>:-gsource-map>")
+    add_link_options(-Wno-pthreads-mem-growth -sALLOW_MEMORY_GROWTH=1)
+elseif(HAIKU) # HaikuOS
     link_libraries(network)
+elseif(ANDROID) # Android
+    link_libraries(log)
 endif()
 
 # Threading
@@ -72,11 +106,6 @@ endif()
 
 message(STATUS "Selected GFX API: ${REMCPE_GFX_API}")
 
-# Android Logging
-if(ANDROID)
-    link_libraries(log)
-endif()
-
 # stb_image And Other Libraries
 add_subdirectory(thirdparty/stb_image EXCLUDE_FROM_ALL)
 
@@ -89,6 +118,10 @@ add_subdirectory(platforms)
 # Assets
 if(EMSCRIPTEN)
     target_link_options(reminecraftpe PRIVATE --use-preload-plugins --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/game@/")
+elseif(XENON)
+    # idk, we'll figure it out later
+    # Example: adding a binary file (like a texture or sound)
+    # xenon_bin2o(my_app.elf data/font.ttf)
 else()
     file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/game/assets" "${CMAKE_CURRENT_BINARY_DIR}/assets" SYMBOLIC)
 endif()
