--- a/platforms/sdl/sdl1/CMakeLists.txt
+++ b/platforms/sdl/sdl1/CMakeLists.txt
@@ -24,11 +24,20 @@ target_link_libraries(reminecraftpe reminecraftpe-core)
 target_link_libraries(reminecraftpe stb_image)
 
 # SDL (From system)
-find_package(SDL REQUIRED)
-target_include_directories(reminecraftpe-core PUBLIC "${SDL_INCLUDE_DIR}")
-target_link_libraries(reminecraftpe-core PUBLIC "${SDL_LIBRARY}")
-if(SDLMAIN_LIBRARY)
-    target_link_libraries(reminecraftpe "${SDLMAIN_LIBRARY}")
+if(XENON)
+    # @TODO: is there a good way to not hardcode these paths?
+    target_include_directories(reminecraftpe-core PUBLIC "${DEVKITXENON}/usr/include/SDL")
+    target_link_libraries(reminecraftpe-core PUBLIC "${DEVKITXENON}/usr/lib/libSDL.a")
+    if(SDLMAIN_LIBRARY)
+        target_link_libraries(reminecraftpe "${SDLMAIN_LIBRARY}")
+    endif()
+else()
+    find_package(SDL REQUIRED)
+    target_include_directories(reminecraftpe-core PUBLIC "${SDL_INCLUDE_DIR}")
+    target_link_libraries(reminecraftpe-core PUBLIC "${SDL_LIBRARY}")
+    if(SDLMAIN_LIBRARY)
+        target_link_libraries(reminecraftpe "${SDLMAIN_LIBRARY}")
+    endif()
 endif()
 
 if(REMCPE_GFX_API STREQUAL "OGL")
