--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ if(EMSCRIPTEN)
     set(CMAKE_EXECUTABLE_SUFFIX ".js")
     add_link_options("$<$<CONFIG:DEBUG>:-gsource-map>")
     add_link_options(-Wno-pthreads-mem-growth -sALLOW_MEMORY_GROWTH=1)
+	add_compile_definitions(MC_NO_NETWORKING)
 endif()
 
 # Detect Windows
