--- a/platforms/sdl/sdl1/CMakeLists.txt
+++ b/platforms/sdl/sdl1/CMakeLists.txt
@@ -29,9 +29,6 @@ if(XENON)
     if(SDLMAIN_LIBRARY)
         target_link_libraries(reminecraftpe "${SDLMAIN_LIBRARY}")
     endif()
-    
-    # Must be linked after SDL, since libSDLXenon uses the SDK
-    target_link_libraries(reminecraftpe-core PUBLIC "xenon")
 else()
     find_package(SDL REQUIRED)
     target_include_directories(reminecraftpe-core PUBLIC "${SDL_INCLUDE_DIR}")
@@ -47,14 +44,19 @@ if(REMCPE_GFX_API STREQUAL "OGL")
     target_link_libraries(reminecraftpe-core PUBLIC OpenGL::GL)
 endif()
 
+if(XENON)
+    # Must be linked after SDL, since libSDLXenon uses the SDK
+    target_link_libraries(reminecraftpe-core PUBLIC "xenon" "fat")
+endif()
+
 # Post-Build
 if(XENON) # Xbox 360 (libXenon)
     # ELF -> ELF32
     add_custom_command(
         TARGET reminecraftpe POST_BUILD
         COMMAND ${CMAKE_OBJCOPY} -O elf32-powerpc --adjust-vma 0x80000000 
-                $<TARGET_FILE:reminecraftpe> ${CMAKE_CURRENT_BINARY_DIR}/reminecraftpe.elf32
-        COMMAND ${CMAKE_STRIP} ${CMAKE_CURRENT_BINARY_DIR}/reminecraftpe.elf32
+                $<TARGET_FILE:reminecraftpe> ${CMAKE_CURRENT_BINARY_DIR}/reminecraftpe.elf
+        COMMAND ${CMAKE_STRIP} ${CMAKE_CURRENT_BINARY_DIR}/reminecraftpe.elf
         COMMENT "Converting to elf32 and stripping..."
     )
 endif()
