Fixed building for XDK * Got it running on Xbox 360

--- a/platforms/windows/projects/Common/Common.vcxproj
+++ b/platforms/windows/projects/Common/Common.vcxproj
@@ -81,7 +81,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="$(MC_ROOT)\compat\vsnprintf.c" />
+    <ClCompile Include="..\..\..\..\compat\vsnprintf.c" />
     <ClCompile Include="$(MC_ROOT)\source\common\CThread.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\common\Logger.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\common\Mth.cpp" />
