--- a/platforms/windows/projects/Renderer/Renderer.vcxproj
+++ b/platforms/windows/projects/Renderer/Renderer.vcxproj
@@ -214,16 +214,19 @@
   <ItemGroup Condition="'$(MC_GFX_API)'=='Null'">
     <ProjectReference Include="..\Renderer.Null\Renderer.Null.vcxproj">
       <Project>{70c3540e-95cd-4a57-bdf2-e1da7767a918}</Project>
+	  <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup Condition="'$(MC_GFX_API)'=='OGL'">
     <ProjectReference Include="..\Renderer.OGL\Renderer.OGL.vcxproj">
       <Project>{aa0216ca-956e-4617-9a71-581b5eebf20c}</Project>
+	  <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup Condition="'$(MC_GFX_API)'=='D3D11'">
     <ProjectReference Include="..\Renderer.D3D11\Renderer.D3D11.vcxproj">
       <Project>{82e92e51-ad31-44ef-a133-ae0053256d5a}</Project>
+	  <LinkLibraryDependencies>true</LinkLibraryDependencies>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Label="Globals">
