--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -79,6 +79,7 @@ add_library(reminecraftpe-core STATIC
     client/sound/SoundRepository.cpp
     client/sound/SoundEngine.cpp
     client/gui/Screen.cpp
+    client/gui/screens/CreditsScreen.cpp
     client/gui/screens/OptionsScreen.cpp
     client/gui/screens/StartMenuScreen.cpp
     client/gui/screens/ConvertWorldScreen.cpp
