--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_C_STANDARD 99)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Warnings
-add_compile_options(-Wall -Wignored-qualifiers -Wvariadic-macros)
+add_compile_options(-Wall -Wignored-qualifiers -Wvariadic-macros -pedantic)
 add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-Wc++11-extensions>)
 if(WERROR)
     add_compile_options(-Werror)
