disable glm warns

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,3 +139,4 @@ endif()
 target_compile_options(stb_vorbis PRIVATE -w)
 target_compile_options(stb_image PRIVATE -w)
 target_compile_options(raknet PRIVATE -w)
+target_compile_options(glm PRIVATE -w)
