--- a/platforms/sdl/sdl2/CMakeLists.txt
+++ b/platforms/sdl/sdl2/CMakeLists.txt
@@ -38,6 +38,7 @@ if(ANDROID OR REMCPE_WIN32)
     add_subdirectory(../../../thirdparty/SDL2/src SDL EXCLUDE_FROM_ALL)
     set_target_properties(SDL2 PROPERTIES CXX_STANDARD 11)
     target_link_libraries(SDL INTERFACE SDL2::SDL2)
+    target_compile_options(SDL2 PRIVATE -w)
 elseif(EMSCRIPTEN)
     # Use Emscripten's SDL2
     set(SDL_FLAG -sUSE_SDL=2)
