--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -301,6 +301,7 @@ add_library(reminecraftpe-core STATIC
     world/item/TileItem.cpp
     world/item/Inventory.cpp
     world/item/DoorItem.cpp
+    world/item/BedItem.cpp
     world/item/ItemInstance.cpp
     world/item/RocketItem.cpp
     world/item/Item.cpp
@@ -363,6 +364,7 @@ add_library(reminecraftpe-core STATIC
     world/tile/GlowstoneTile.cpp
     world/tile/Web.cpp
     world/tile/FenceTile.cpp
+    world/tile/BedTile.cpp
     renderer/GL/GL.cpp
     renderer/Attribute.cpp
     renderer/ConstantBufferMetaData.cpp
