--- a/platforms/windows/projects/STB/STB.vcxproj.filters
+++ b/platforms/windows/projects/STB/STB.vcxproj.filters
@@ -72,7 +72,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\include\stb_vorbis.c">
-      <Filter>Header Files</Filter>
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\thirdparty\stb_image\src\stb_image_impl.c">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
