--- a/platforms/windows/projects/Renderer.D3D9/Renderer.D3D9.vcxproj
+++ b/platforms/windows/projects/Renderer.D3D9/Renderer.D3D9.vcxproj
@@ -47,7 +47,7 @@
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d9\TextureD3D9.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d9\helpers\TextureHelperD3D9.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d9\helpers\ErrorHandlerD3D9.cpp" />
-    <ClCompile Include="..\..\..\..\source\renderer\hal\d3d9\FixedPipelineStateD3D9.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d9\FixedPipelineStateD3D9.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\dxgi\helpers\DirectXComInterface.hpp" />
@@ -71,7 +71,7 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d9\API_D3D9Compiler.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d9\helpers\TextureHelperD3D9.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d9\helpers\ErrorHandlerD3D9.hpp" />
-    <ClInclude Include="..\..\..\..\source\renderer\hal\d3d9\FixedPipelineStateD3D9.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d9\FixedPipelineStateD3D9.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
