Fixed D3D9 normals * Added mce::VertexFieldFormat * Added Xbox 360-specific D3D optimizations

--- a/platforms/windows/projects/Directory.Build.props
+++ b/platforms/windows/projects/Directory.Build.props
@@ -170,12 +170,12 @@
     </Link>
   </ItemDefinitionGroup>
    <!-- Item Definitions - Xbox 360 (Release) -->
-  <!--ItemDefinitionGroup Condition="'$(Platform)' == 'Xbox 360' And $(Configuration.StartsWith('Release'))">
+  <ItemDefinitionGroup Condition="'$(Platform)' == 'Xbox 360' And $(Configuration.StartsWith('Release'))">
     <ClCompile>
       <PreprocessorDefinitions>MC_LOG_LEVEL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Optimization>Disabled</Optimization>
       <ExceptionHandling>false</ExceptionHandling>
       <MinimalRebuild>true</MinimalRebuild>
     </ClCompile>
-  </ItemDefinitionGroup-->
+  </ItemDefinitionGroup>
 </Project>
