--- a/platforms/windows/projects/Renderer.D3D9/Renderer.D3D9.vcxproj.filters
+++ b/platforms/windows/projects/Renderer.D3D9/Renderer.D3D9.vcxproj.filters
@@ -101,7 +101,7 @@
     <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d9\helpers\ErrorHandlerD3D9.cpp">
       <Filter>Source Files\HAL\D3D9\Helpers</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\renderer\hal\d3d9\FixedPipelineStateD3D9.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\renderer\hal\d3d9\FixedPipelineStateD3D9.cpp">
       <Filter>Source Files\HAL\D3D9</Filter>
     </ClCompile>
   </ItemGroup>
@@ -169,7 +169,7 @@
     <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d9\helpers\ErrorHandlerD3D9.hpp">
       <Filter>Header Files\HAL\D3D9\Helpers</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\renderer\hal\d3d9\FixedPipelineStateD3D9.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\renderer\hal\d3d9\FixedPipelineStateD3D9.hpp">
       <Filter>Header Files\HAL\D3D9</Filter>
     </ClInclude>
   </ItemGroup>
