--- a/platforms/windows/projects/STB/STB.vcxproj
+++ b/platforms/windows/projects/STB/STB.vcxproj
@@ -51,7 +51,7 @@
   <PropertyGroup Label="UserMacros" />
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\include\stb_vorbis.c" />
-    <ClCompile Include="..\..\..\..\thirdparty\stb_image\src\stb_image_impl.c" />
+    <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(MC_ROOT)\thirdparty\stb_image\include\stb_image.h" />
