--- a/platforms/windows/projects/STB/STB.vcxproj.filters
+++ b/platforms/windows/projects/STB/STB.vcxproj.filters
@@ -74,7 +74,7 @@
     <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\include\stb_vorbis.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\thirdparty\stb_image\src\stb_image_impl.c">
+    <ClCompile Include="$(MC_ROOT)\thirdparty\stb_image\src\stb_image_impl.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
