--- a/platforms/windows/projects/Directory.Build.props
+++ b/platforms/windows/projects/Directory.Build.props
@@ -18,7 +18,7 @@
   </PropertyGroup-->
   <!-- Macros - Win32 & x64 -->
   <PropertyGroup Label="UserMacros" Condition="'$(Platform)'=='Win32' Or '$(Platform)'=='x64'">
-	<MC_GFX_API>D3D9</MC_GFX_API>
+	<MC_GFX_API>OGL</MC_GFX_API>
   </PropertyGroup>
   <!-- Macros - Xbox 360 -->
   <PropertyGroup Label="UserMacros" Condition="'$(Platform)'=='Xbox 360'">
@@ -170,12 +170,12 @@
     </Link>
   </ItemDefinitionGroup>
    <!-- Item Definitions - Xbox 360 (Release) -->
-  <ItemDefinitionGroup Condition="'$(Platform)' == 'Xbox 360' And $(Configuration.StartsWith('Release'))">
+  <!--ItemDefinitionGroup Condition="'$(Platform)' == 'Xbox 360' And $(Configuration.StartsWith('Release'))">
     <ClCompile>
       <PreprocessorDefinitions>MC_LOG_LEVEL=0;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <Optimization>Disabled</Optimization>
       <ExceptionHandling>false</ExceptionHandling>
       <MinimalRebuild>true</MinimalRebuild>
     </ClCompile>
-  </ItemDefinitionGroup>
+  </ItemDefinitionGroup-->
 </Project>
