--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -548,6 +548,9 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\GameController.hpp">
       <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\..\source\client\gui\MenuPointer.hpp">
+      <Filter>Header Files\GUI</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\gui\components\AvailableGamesList.cpp">
@@ -904,9 +907,6 @@
     <ClCompile Include="$(MC_ROOT)\source\client\renderer\ScreenRenderer.cpp">
       <Filter>Source Files\Renderer</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiElement.cpp">
-      <Filter>Source Files\GUI</Filter>
-    </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\model\geom\ModelPart.cpp">
       <Filter>Source Files\Model\Geom</Filter>
     </ClCompile>
@@ -963,6 +963,12 @@
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\GameController.cpp">
       <Filter>Source Files\Player\Input</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\source\client\gui\MenuPointer.cpp">
+      <Filter>Source Files\GUI</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\..\source\client\gui\GuiElement.cpp">
+      <Filter>Source Files\GUI</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
