--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -118,8 +118,8 @@
     <ClInclude Include="$(MC_ROOT)\source\client\model\geom\PolygonQuad.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\options\Options.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\MenuPointer.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\player\input\GameControllerManager.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\MenuPointer.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\GameControllerManager.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\ControllerBuildInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\ControllerTurnInput.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\ITurnInput.hpp" />
@@ -265,9 +265,9 @@
     <ClCompile Include="$(MC_ROOT)\source\client\model\geom\PolygonQuad.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\options\Options.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\GuiElement.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\MenuPointer.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\player\input\GameControllerManager.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiElement.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\MenuPointer.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\GameControllerManager.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\ControllerBuildInput.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\ControllerMoveInput.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\ControllerTurnInput.cpp" />
