--- a/platforms/windows/projects/Client/Client.vcxproj.filters
+++ b/platforms/windows/projects/Client/Client.vcxproj.filters
@@ -200,7 +200,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\Screen.hpp">
       <Filter>Header Files\GUI</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\player\input\GameControllerManager.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\player\input\GameControllerManager.hpp">
       <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\ControllerTurnInput.hpp">
@@ -548,7 +548,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\GameController.hpp">
       <Filter>Header Files\Player\Input</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\..\source\client\gui\MenuPointer.hpp">
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\MenuPointer.hpp">
       <Filter>Header Files\GUI</Filter>
     </ClInclude>
   </ItemGroup>
@@ -640,7 +640,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiComponent.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\player\input\GameControllerManager.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\player\input\GameControllerManager.cpp">
       <Filter>Source Files\Player\Input</Filter>
     </ClCompile>
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\ControllerTurnInput.cpp">
@@ -964,10 +964,10 @@
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\GameController.cpp">
       <Filter>Source Files\Player\Input</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\gui\MenuPointer.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\MenuPointer.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\..\source\client\gui\GuiElement.cpp">
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\GuiElement.cpp">
       <Filter>Source Files\GUI</Filter>
     </ClCompile>
   </ItemGroup>
